springboot-todo/k8s_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  
  name: todo-app

  labels:
    app: todo-app
    app.openshift.io/runtime: spring-boot

spec:

  replicas: 1

  selector:
    matchLabels:
        app: todo-app

  template:
    metadata:
      labels: 
        app: todo-app

    spec:

      containers:
        - name: todo-app

          image: 'quay.io/mukeshs1306/springboot-todo-app:latest'

          ports:
            - name: http
              containerPort: 9001
              protocol: TCP

          resources:
            requests:
              cpu: 460m
              memory: 550Mi
            limits:
              cpu: 500m
              memory: 600Mi
