springboot-todo/k8s_manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-todo
  labels:
    app: spring-boot-todo
spec:
  type: ClusterIP
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
      name: 9001-http
  selector:
    app: spring-boot-todo
