springboot-todo/k8s_manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: todo-app
spec:
  subdomain: todo-app
  to:
    kind: Service
    name: todo-app
    weight: 100
  port:
    targetPort: 9001-tcp
  wildcardPolicy: None
